--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>sorcer</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-		<version>1.0-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>distribution</artifactId>
     <name>SORCER distribution</name>
@@ -182,6 +182,12 @@
             <version>2.1_3</version>
         </dependency>
 
+        
+        <dependency>
+	  <groupId>org.codehaus.izpack</groupId>
+	  <artifactId>izpack-standalone-compiler</artifactId>
+	  <version>${izpack-release}</version>
+	</dependency>
 
 
     </dependencies>
@@ -259,8 +265,8 @@
     
     <properties>
         <staging.dir>${project.build.directory}/staging</staging.dir>
-        <izpack-release>4.3.2</izpack-release>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <izpack-release>4.3.5</izpack-release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>      
     </properties>
 
     <profiles>
@@ -276,71 +282,31 @@
                 
             </dependencies>
             <build>
-                <plugins>
-
-                    <!--  copy other checked resource into staging area, expected by src/izpack/install.xml -->
-                    <plugin>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.3</version>
-                        <executions>
-                            <execution>
-                                <id>create-staging-area</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <tasks>
-                                        <!-- Setup installer -->
-                                        <copy todir="${staging.dir}/izpack">
-                                            <fileset dir="${basedir}/src/izpack"/>
-                                            <filterset>
-                                                <filter token="VERSION" value="${project.version}"/>
-                                            </filterset>
-                                        </copy>
-
-                                        <!-- Package examples -->
-                                        <exec executable="mvn" dir="${basedir}/../examples/">
-                                            <arg value="clean"/>
-                                            <arg value="-q"/>
-                                        </exec>
-                                        <mkdir dir="${staging.dir}/examples"/>
-                                        <zip destfile="${staging.dir}/examples/examples.zip">
-                                            <zipfileset dir="${basedir}/../examples/" prefix="examples">
-                                                <exclude name="**/*.iml"/>
-                                                <exclude name="**/api*.iml"/>
-                                                <exclude name="**/service*.iml"/>
-                                                <exclude name="**/ui*.iml"/>
-                                                <exclude name="**/rule*.iml"/>
-                                                <exclude name="**/proxy.iml"/>
-                                                <exclude name="**/calculator.iml"/>
-                                                <exclude name="**/events.iml"/>
-                                                <exclude name="**/hospital.iml"/>
-                                                <exclude name="**/springbean.iml"/>
-                                                <exclude name="**/tomcat.iml"/>
-                                                <exclude name="**/workflow.iml"/>
-                                            </zipfileset>
-                                        </zip>
-                                    </tasks>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>zip-release</id>
-                                <phase>install</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <tasks>
-                                        <!-- Zip up the release  -->
-                                        <property name="release.archive" value="rio-${project.version}"/>
-                                        <property name="dist.version" value="${project.version}"/>
-                                        <ant antfile="${basedir}/ziprelease.xml" target="release"/>                                                                                
-                                    </tasks>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
+	      <plugins>
+              <plugin>
+                  <artifactId>maven-antrun-plugin</artifactId>
+                  <version>1.3</version>
+                  <executions>
+                      <execution>
+                          <id>create-staging-area</id>
+                          <phase>process-resources</phase>
+                          <goals>
+                              <goal>run</goal>
+                          </goals>
+                          <configuration>
+                              <tasks>
+                                  <!-- Setup installer -->
+                                  <copy todir="${staging.dir}/izpack">
+                                      <fileset dir="${basedir}/src/izpack"/>
+                                      <filterset>
+                                          <filter token="v.sorcer" value="${v.sorcer}"/>
+                                      </filterset>
+                                  </copy>
+                              </tasks>
+                          </configuration>
+                      </execution>
+                  </executions>
+              </plugin>
                     <plugin>
                         <groupId>org.codehaus.izpack</groupId>
                         <artifactId>izpack-maven-plugin</artifactId>
@@ -358,7 +324,7 @@
                                 <configuration>
                                     <!--<izpackBasedir>${staging.dir}/izpack</izpackBasedir>
                                     <customPanelDirectory>${staging.dir}/izpack</customPanelDirectory>-->
-                                    <installerFile>${project.build.directory}/rio-${project.version}-installer.jar</installerFile>
+                                    <installerFile>${project.build.directory}/sorcer-${project.version}-setup.jar</installerFile>
                                 </configuration>
                             </execution>
                         </executions>
@@ -369,58 +335,14 @@
                                 <version>${izpack-release}</version>
                             </dependency>
                         </dependencies>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>enforce-docs-available</id>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                                <configuration>
-                                    <rules>
-                                        <requireFilesExist>
-                                            <files>
-                                                <file>../docs/index.html</file>
-                                            </files>
-                                            <message>You must build the site by running "mvn site" from the root of the project.</message>
-                                        </requireFilesExist>
-                                    </rules>
-                                    <fail>true</fail>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
+                    </plugin>                    
                 </plugins>
             </build>
         </profile>
         <profile>
             <id>deploy</id>
             <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.3</version>
-                        <executions>                            
-                            <execution>
-                                <id>zip-release</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <tasks>
-                                        <!-- Zip up the release  -->
-                                        <property name="release.archive" value="distribution-${project.version}"/>
-                                        <property name="dist.version" value="${project.version}"/>
-                                        <ant antfile="${basedir}/ziprelease.xml" target="release"/>
-                                    </tasks>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
+                <plugins>                   
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
