Add starting reggie and webster (WIP)

--- a/examples/first/first-prv/src/main/resources/config/services.config
+++ b/examples/first/first-prv/src/main/resources/config/services.config
@@ -17,7 +17,7 @@ com.sun.jini.start {
 	serviceDescriptors = new ServiceDescriptor[] {
 		/* SORCER Webster, set to serve up root directories */
 		// (String policy, int port, String[] roots)
-		SorcerDescriptorUtil.getWebster(policy, port, Booter.getWebsterHostName(), SorcerEnv.getWebsterRoots()),
+/*		SorcerDescriptorUtil.getWebster(policy, port, Booter.getWebsterHostName(), SorcerEnv.getWebsterRoots()),
 
 	    new SorcerServiceDescriptor(
 	      	Resolver.resolveCodeBase(
@@ -33,7 +33,7 @@ com.sun.jini.start {
 			),
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "/configs/jini/configs/reggie.config" }
-		),
+		),*/
 
 		new SorcerServiceDescriptor(
 			Resolver.resolveCodeBase(
