--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>sorcer</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-	<version>1.0-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>distribution</artifactId>
     <name>SORCER distribution</name>
@@ -104,7 +104,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>dependencies</artifactId>
             <version>${project.version}</version>
-           <!-- <scope>import</scope>-->
+            <!-- <scope>import</scope>-->
         </dependency>
 
         <dependency>
@@ -182,14 +182,22 @@
             <version>2.1_3</version>
         </dependency>
 
-        
-        <dependency>
-	  <groupId>org.codehaus.izpack</groupId>
-	  <artifactId>izpack-standalone-compiler</artifactId>
-	  <version>${izpack-release}</version>
-	</dependency>
+
+        <!--        <dependency>
+                    <groupId>org.codehaus.izpack</groupId>
+                    <artifactId>izpack-maven-plugin</artifactId>
+                    <version>${izpack.version}</version>
+                    <scope>compile</scope>
+                </dependency>-->
 
 
+        <!--
+                <dependency>
+                    <groupId>org.codehaus.izpack</groupId>
+                    <artifactId>izpack-standalone-compiler</artifactId>
+                    <version>${izpack.version}</version>
+                </dependency>
+        -->
     </dependencies>
 
     <build>
@@ -243,7 +251,7 @@
             -->
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.3</version>
+                <version>1.6</version>
                 <executions>
                     <execution>
                         <id>create-marker</id>
@@ -262,59 +270,59 @@
 
         </plugins>
     </build>
-    
+
     <properties>
         <staging.dir>${project.build.directory}/staging</staging.dir>
-        <izpack-release>4.3.5</izpack-release>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>      
+        <izpack.version>4.3.5</izpack.version>
+        <!--<izpack.version>5.0.0-beta11</izpack.version>-->
+        <izpack.staging>${project.build.directory}/staging</izpack.staging>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <profiles>
         <profile>
             <id>release</id>
-            <dependencies>
-                <!-- IzPack dependencies -->
-                <dependency>
-                    <groupId>org.codehaus.izpack</groupId>
-                    <artifactId>izpack-standalone-compiler</artifactId>
-                    <version>${izpack-release}</version>
-                </dependency>
-                
-            </dependencies>
             <build>
-	      <plugins>
-              <plugin>
-                  <artifactId>maven-antrun-plugin</artifactId>
-                  <version>1.3</version>
-                  <executions>
-                      <execution>
-                          <id>create-staging-area</id>
-                          <phase>process-resources</phase>
-                          <goals>
-                              <goal>run</goal>
-                          </goals>
-                          <configuration>
-                              <tasks>
-                                  <!-- Setup installer -->
-                                  <copy todir="${staging.dir}/izpack">
-                                      <fileset dir="${basedir}/src/izpack"/>
-                                      <filterset>
-                                          <filter token="v.sorcer" value="${v.sorcer}"/>
-                                      </filterset>
-                                  </copy>
-                              </tasks>
-                          </configuration>
-                      </execution>
-                  </executions>
-              </plugin>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <id>create-staging-area</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <!-- Setup installer -->
+                                        <copy todir="${staging.dir}/izpack">
+                                            <fileset dir="${basedir}/src/izpack">
+                                                <include name="**/*.xml"/>
+                                                <include name="**/*.html"/>
+                                                <include name="**/*.xml_*"/>
+                                                <include name="**/*.txt"/>
+                                            </fileset>
+                                            <filterset>
+                                                <filter token="${v.sorcer}" value="${v.sorcer}"/>
+                                            </filterset>
+                                        </copy>
+                                        <copy todir="${staging.dir}/izpack">
+                                            <fileset dir="${basedir}/src/izpack">
+                                                <include name="**/*.png"/>
+                                            </fileset>
+                                        </copy>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>org.codehaus.izpack</groupId>
                         <artifactId>izpack-maven-plugin</artifactId>
                         <version>1.0-alpha-5</version>
-                        <configuration>
-                            <izpackBasedir>${staging.dir}/izpack</izpackBasedir>
-                            <customPanelDirectory>${staging.dir}/izpack</customPanelDirectory>
-                        </configuration>
+
                         <executions>
                             <execution>
                                 <phase>package</phase>
@@ -322,9 +330,12 @@
                                     <goal>izpack</goal>
                                 </goals>
                                 <configuration>
-                                    <!--<izpackBasedir>${staging.dir}/izpack</izpackBasedir>
-                                    <customPanelDirectory>${staging.dir}/izpack</customPanelDirectory>-->
-                                    <installerFile>${project.build.directory}/sorcer-${project.version}-setup.jar</installerFile>
+                                    <izpackBasedir>${staging.dir}/izpack</izpackBasedir>
+                                    <!-- base for relative paths in izpack descriptor -->
+                                    <!--<baseDir>${staging.dir}/izpack</baseDir>-->
+                                    <!--<installFile>${staging.dir}/izpack/install.xml</installFile>-->
+                                    <installerFile>${project.build.directory}/sorcer-${project.version}-setup.jar
+                                    </installerFile>
                                 </configuration>
                             </execution>
                         </executions>
@@ -332,17 +343,40 @@
                             <dependency>
                                 <groupId>org.codehaus.izpack</groupId>
                                 <artifactId>izpack-standalone-compiler</artifactId>
-                                <version>${izpack-release}</version>
+                                <version>${izpack.version}</version>
                             </dependency>
                         </dependencies>
-                    </plugin>                    
+                    </plugin>
+                    <plugin>
+                        <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                        <artifactId>launch4j-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>l4j-clui</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>launch4j</goal>
+                                </goals>
+                                <configuration>
+                                    <headerType>gui</headerType>
+                                    <icon>src/main/configs/sos.ico</icon>
+                                    <outfile>target/sorcer-${project.version}-setup.exe</outfile>
+                                    <jar>target/sorcer-${project.version}-setup.jar</jar>
+                                    <errTitle>Sorcer</errTitle>
+                                    <jre>
+                                        <minVersion>1.6.0</minVersion>
+                                    </jre>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
         <profile>
             <id>deploy</id>
             <build>
-                <plugins>                   
+                <plugins>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
@@ -365,9 +399,9 @@
                             </execution>
                         </executions>
                     </plugin>
-            </plugins>
+                </plugins>
             </build>
         </profile>
-	</profiles>
+    </profiles>
 
 </project>
