[poms] Move StringUtil to sos-utils, fix dependencies and ant scripts; +run-requestor configuration (WIP - #28); Move ObjectUtil and TimeUtil to sos-shwll (the only usage);

--- a/examples/ex1/ex1-prv/pom.xml
+++ b/examples/ex1/ex1-prv/pom.xml
@@ -31,7 +31,12 @@
             <artifactId>commons-prv</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
-        <dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-util</artifactId>
+			<version>${v.sorcer}</version>
+		</dependency>
+		<dependency>
             <groupId>org.apache.river</groupId>
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
