--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,11 @@
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>2.6</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.14.1</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
