--- a/sos-providers/cataloger/cataloger-prv/pom.xml
+++ b/sos-providers/cataloger/cataloger-prv/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 </project>
