--- a/sos-providers/spacer/spacer-prv/pom.xml
+++ b/sos-providers/spacer/spacer-prv/pom.xml
@@ -21,7 +21,13 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         	<version>${project.version}</version>
-        </dependency>        <dependency>
+        </dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
