--- a/sos/sos-exertlet-sui/pom.xml
+++ b/sos/sos-exertlet-sui/pom.xml
@@ -19,7 +19,12 @@
             <artifactId>sos-platform</artifactId>
         	<version>${project.version}</version>
         </dependency>
-      	<dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<scope>provided</scope>
