--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -31,7 +31,12 @@
             <artifactId>sos-webster</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>jep</groupId>
 			<artifactId>jep</artifactId>
 			<version>2.4.1a</version>
