--- a/sos/sos-tests/pom.xml
+++ b/sos/sos-tests/pom.xml
@@ -17,5 +17,18 @@
 		<module>int-tests</module>
 	</modules>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <junit.sorcer.provider.start>true</junit.sorcer.provider.start>
+                        <buildDirectory>${project.build.directory}</buildDirectory>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
