--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -100,6 +100,19 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- maven plugins -->
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-maven-plugin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-provider</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>dependencies</artifactId>
