--- a/examples/ex3/configs/worker-run.properties
+++ b/examples/ex3/configs/worker-run.properties
@@ -12,6 +12,6 @@ provider.access.type=PULL
 provider.control.flow=PARALLEL
 #provider.control.flow=SEQUENTIAL
 
-value.prefix.1=x
-value.prefix.2=y
-value.prefix.3=z
+op1.prefix=o1
+op2.prefix=o2
+op3.prefix=o3
