Fixed sequence of tests in int-tests

--- a/sos/sos-tests/pom.xml
+++ b/sos/sos-tests/pom.xml
@@ -27,6 +27,7 @@
                         <junit.sorcer.provider.start>true</junit.sorcer.provider.start>
                         <buildDirectory>${project.build.directory}</buildDirectory>
                     </systemPropertyVariables>
+                    <forkMode>always</forkMode>
                 </configuration>
             </plugin>
         </plugins>
