[int-tests] move integration tests to ju-arithmentic; clean tests

--- a/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -47,7 +47,11 @@
             <artifactId>rio-platform</artifactId>
     <!--        <scope>provided</scope>-->
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+	</dependencies>
     <build>
     <plugins>
         <plugin>
