--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,13 @@
 	<packaging>pom</packaging>
 	<name>SORCER Project</name>
 	<version>1.0-SNAPSHOT</version>
-	<description>SORCER</description>
-	<url>http://sorcersoft.org/</url>
+	<description>Sorcer is a federated computing platform centered on a global network and a seamless fusion of virtual services.
+        Dynamically federated services integrate various science and engineering domains fostering transdisciplinary modeling and programming.
+        Firstly, the platform allows the users to deploy everything in the global network as a virtualizable and federatable service.
+        Secondly, a friendly and intuitive service-oriented programming model allows the users to dynamically compose the relevant service federations.
+        These federations range from tens to thousands or even millions of services and execute in the global network with an unprecedented level of reliability.
+    </description>
+	<url>http://sorcersoft.github.com/</url>
 	<inceptionYear>2013</inceptionYear>
 
 	<properties>
@@ -31,7 +36,20 @@
 		<module>examples</module>
     </modules>
 
-	<developers>
+    <licenses>
+        <license>
+            <name>The Apache Software License 2.0, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>Sorcersoft.com S.A.</name>
+        <url>http://www.sorcersoft.com</url>
+    </organization>
+
+    <developers>
 		<developer>
 			<name>Mike Sobolewski</name>
 			<id>mwsobol</id>
@@ -314,8 +332,46 @@
 					</properties>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.2</version>
+                <inherited>false</inherited>
+
+                <configuration>
+                    <locales>en</locales>
+                    <!--<outputDirectory>${basedir}/target</outputDirectory>-->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-descriptor</id>
+                        <goals>
+                            <goal>attach-descriptor</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.doxia</groupId>
+                        <artifactId>doxia-module-markdown</artifactId>
+                        <version>1.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>lt.velykis.maven.skins</groupId>
+                        <artifactId>reflow-velocity-tools</artifactId>
+                        <version>1.0.0</version>
+                    </dependency>
+                    <!-- Reflow skin requires Velocity >= 1.7  -->
+                    <dependency>
+                        <groupId>org.apache.velocity</groupId>
+                        <artifactId>velocity</artifactId>
+                        <version>1.7</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 		</plugins>
 	</build>
+
 	<repositories>
 		<repository>
 			<id>hashnot</id>
@@ -356,7 +412,31 @@
 	</prerequisites>
 
 	<reporting>
-		<plugins>
+            <excludeDefaults>true</excludeDefaults>
+            <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.4</version>
+                <inherited>false</inherited>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>dependency-management</report>
+                            <report>plugin-management</report>
+                            <report>issue-tracking</report>
+                            <!--<report>mailing-list</report>-->
+                            <report>license</report>
+                            <report>project-team</report>
+                            <report>scm</report>
+                            <report>index</report>
+                        </reports>
+                        <configuration>
+                            <aggregate>true</aggregate>
+                        </configuration>
+                    </reportSet>
+                </reportSets>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
@@ -368,7 +448,36 @@
 				<version>2.3</version>
 			</plugin>
 		</plugins>
-	</reporting>
+        <!--        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.8</version>
+            <inherited>false</inherited>
+            <configuration>
+                <aggregate>true</aggregate>
+            </configuration>
+            <reportSets>
+                <reportSet>
+                    <id>aggregate</id>
+                    <configuration>
+                        <links>
+                            <link>http://docs.oracle.com/javase/7/docs/api/</link>
+                            <link>http://www.rio-project.org/apidocs/</link>
+                            <link>https://river.apache.org/doc/api/</link>
+                        </links>
+                        <detectLinks>true</detectLinks>
+                        <breakiterator>true</breakiterator>
+                        <top><![CDATA[<h2>Sorcer ${project.version} API Documentation</h2>]]></top>
+                        <footer><![CDATA[<i>Copyright &copy; <a href="http://www.sorcersoft.com" target="_blank">Sorcersoft.com S.A.</a>.</i>]]></footer>
+                        <excludePackageNames>edu.emory:sorcer.ex1.*:sorcer.ex2.*:sorcer.ex3.*:sorcer.ex4.*:sorcer.ex5.*</excludePackageNames>
+                    </configuration>
+                    <reports>
+                        <report>aggregate</report>
+                    </reports>
+                </reportSet>
+            </reportSets>
+        </plugin>-->
+    </reporting>
 
 	<issueManagement>
 		<url>https://github.com/sorcersoft/sorcer/issues</url>
