--- a/examples/ex3/ex3-dl/pom.xml
+++ b/examples/ex3/ex3-dl/pom.xml
@@ -10,8 +10,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex3-req</artifactId>
-    <name>SORCER examples :: ex3 :: req</name>
+    <artifactId>ex3-dl</artifactId>
+    <name>SORCER examples :: ex3 :: dl</name>
 
     <dependencies>
         <dependency>
@@ -21,18 +21,14 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex3-dl</artifactId>
-            <version>${project.version}</version>
+            <artifactId>sos-platform</artifactId>
+            <version>${v.sorcer}</version>
         </dependency>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
-	    <version>${v.sorcer}</version>
-        </dependency>
-	<dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-req</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
+
 </project>
