--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -195,22 +195,6 @@
             <version>2.1_3</version>
         </dependency>
 
-
-        <!--        <dependency>
-                    <groupId>org.codehaus.izpack</groupId>
-                    <artifactId>izpack-maven-plugin</artifactId>
-                    <version>${izpack.version}</version>
-                    <scope>compile</scope>
-                </dependency>-->
-
-
-        <!--
-                <dependency>
-                    <groupId>org.codehaus.izpack</groupId>
-                    <artifactId>izpack-standalone-compiler</artifactId>
-                    <version>${izpack.version}</version>
-                </dependency>
-        -->
     </dependencies>
 
     <build>
@@ -328,6 +312,20 @@
                                         </copy>
                                     </tasks>
                                 </configuration>
+                            </execution>
+                            <execution>
+                                <id>create-checksums</id>
+                                <phase>install</phase>
+                                    <goals>
+                                        <goal>run</goal>
+                                    </goals>
+                                    <configuration>
+                                        <tasks>
+                                            <checksum format="MD5SUM" file="${project.build.directory}/sorcer-${project.version}-setup.jar" forceOverwrite="yes"/>
+                                            <checksum format="MD5SUM" file="${project.build.directory}/sorcer-${project.version}-setup.exe" forceOverwrite="yes"/>
+                                            <checksum format="MD5SUM" file="${project.build.directory}/sorcer-${project.version}.zip" forceOverwrite="yes"/>
+                                        </tasks>
+                                    </configuration>
                             </execution>
                         </executions>
                     </plugin>
