--- a/tools/sorcer-maven-plugin/pom.xml
+++ b/tools/sorcer-maven-plugin/pom.xml
@@ -54,10 +54,10 @@
 			<artifactId>jsr305</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.sonatype.aether</groupId>
 			<artifactId>aether-util</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
