--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 before_script:
   - $SORCER_HOME/bin/sorcer-boot
 script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
-jdk:            u
+jdk:
 #  - openjdk6
 #  - openjdk7
   - oraclejdk7
