--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - export SORCER_HOME=`pwd`
   - echo "SORCER_HOME is $SORCER_HOME"    
 before_script:
-  - $SORCER_HOME/bin/sorcer-boot
+  - $SORCER_HOME/bin/sorcer-boot &
 script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
 jdk:
 #  - openjdk6
