ex1 and ex6 JUinit tests refactoring

--- a/examples/ex1/pom.xml
+++ b/examples/ex1/pom.xml
@@ -20,7 +20,7 @@
 	<modules>
 		<module>ex1-api</module>
 		<module>ex1-prv</module>
-		<module>ex1-req-api</module>
+		<module>ex1-dl</module>
 		<module>ex1-req</module>
 	</modules>
 </project>
