--- a/examples/ex1/ex1-dl/pom.xml
+++ b/examples/ex1/ex1-dl/pom.xml
@@ -10,8 +10,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex1-req-api</artifactId>
-    <name>SORCER examples :: ex1 :: req :: api</name>
+    <artifactId>ex1-dl</artifactId>
+    <name>SORCER examples :: ex1 :: dl</name>
 
     <dependencies>
         <dependency>
