--- a/examples/ex1/ex1-req/pom.xml
+++ b/examples/ex1/ex1-req/pom.xml
@@ -45,6 +45,11 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex1-req-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
