Fixed build of ex1 and ex6

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -24,6 +24,11 @@
 		<module>first</module>
 	</modules>
 
+    <properties>
+        <maven.test.skip>true</maven.test.skip>
+        <skipTests>${maven.test.skip}</skipTests>
+    </properties>
+
 	<build>
 		<pluginManagement>
 			<plugins>
