--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 before_install:
   - unset SORCER_HOME
   - export SORCER_HOME=`pwd`
-  - echo "SORCER_HOME is $SORCER_HOME"    
+  - echo "SORCER_HOME is $SORCER_HOME"
+install: mvn -q install
 before_script:
   - $SORCER_HOME/bin/sorcer-boot &
 script: cd $SORCER_HOME/sos/sos-tests/ && mvn -Djava.net.preferIPv4Stack=true -Dmaven.test.skip=false test
