ex1 and ex6 JUinit tests refactoring

--- a/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt1-prv.config
+++ b/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt1-prv.config
@@ -7,7 +7,6 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.ex1.provider.*;
-import java.util.logging.Level;
 
 sorcer.core.provider.ServiceProvider {
 		name="XYZ";
@@ -25,7 +24,7 @@ sorcer.core.provider.ServiceProvider {
 		//workerCount = 2;	
 		
 		remoteLogging = true;
-		//remoteLgerName =
+		//remoteLoggerName =
 		//remoteLoggerManger =
 		remoteLoggerLevel = Level.ALL;
 		
