--- a/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt2-prv.config
+++ b/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt2-prv.config
@@ -25,7 +25,7 @@ sorcer.core.provider.ServiceProvider {
 		//workerCount = 2;	
 			
 		remoteLogging = true;
-		//remoteLgerName =
+		//remoteLoggerName =
 		//remoteLoggerManger =
 		remoteLoggerLevel = Level.ALL;
 		
