--- a/examples/ex6/ex6-req/pom.xml
+++ b/examples/ex6/ex6-req/pom.xml
@@ -47,6 +47,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
