--- a/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt1-prv.config
+++ b/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt1-prv.config
@@ -7,6 +7,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.ex1.provider.*;
+import java.util.logging.Level;
 
 sorcer.core.provider.ServiceProvider {
 		name="XYZ";
