--- a/examples/first/first-prv/src/main/resources/config/SampleService.config
+++ b/examples/first/first-prv/src/main/resources/config/SampleService.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
 	publishedInterfaces = new Class[] { com.example.sorcer.SampleService.class };
 	// service beans
 	beanClasses = new Class[] { com.example.sorcer.SampleServiceImpl.class };
-	iconName="/META-INF/sorcer/sorcer.png";
+	iconName="/config/sorcer.png";
 
 	monitorEnabled = false;
     spaceEnabled = false;
