--- a/examples/first/first-prv/src/main/resources/config/services.config
+++ b/examples/first/first-prv/src/main/resources/config/services.config
@@ -51,7 +51,7 @@ com.sun.jini.start {
 				}
 			),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "classpath:/META-INF/sorcer/SampleService.config" }
+			new String[] { "classpath:/config/SampleService.config" }
 		)
 	};
 }
