--- a/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
+++ b/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/src/main/resources/config/services.config
@@ -33,7 +33,7 @@ com.sun.jini.start {
 				}
 			),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "classpath:/META-INF/sorcer/${providerInterface}.config" }
+			new String[] { "classpath:/config/${providerInterface}.config" }
 		)
 	};
 }
