--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/HelloWorld.config
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/HelloWorld.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
 	publishedInterfaces = new Class[] { com.sorcersoft.first.HelloWorld.class };
 	// service beans
 	beanClasses = new Class[] { com.sorcersoft.first.HelloWorldImpl.class };
-	iconName="/META-INF/sorcer/sorcer.png";
+	iconName="/config/sorcer.png";
 
 	monitorEnabled = false;
     spaceEnabled = false;
