--- a/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -33,7 +33,7 @@ com.sun.jini.start {
 				}
 			),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "classpath:/META-INF/sorcer/HelloWorld.config" }
+			new String[] { "classpath:/config/HelloWorld.config" }
 		)
 	};
 }
