--- a/examples/ex1/ex1-prv/src/main/resources/config/services.config
+++ b/examples/ex1/ex1-prv/src/main/resources/config/services.config
@@ -19,6 +19,7 @@ com.sun.jini.start {
 
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex1-api")
+ 			//+" "+Resolver.resolveRelative("net.jini.lookup:serviceui")
  			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
             ConfigUtil.concat(new Object[] {
@@ -31,6 +32,7 @@ com.sun.jini.start {
 
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex1-api")
+ 			//+" "+Resolver.resolveRelative("net.jini.lookup:serviceui")
  			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
             ConfigUtil.concat(new Object[] {
