--- a/examples/ex5/ex5-prv/src/main/resources/config/boot-all-providers.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/boot-all-providers.config
@@ -23,7 +23,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}adder-prv.config" }
         ),
 
 		new SorcerServiceDescriptor(
@@ -35,7 +35,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}multiplier-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}multiplier-prv.config" }
        ),
           	
        new SorcerServiceDescriptor(
@@ -47,7 +47,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}divider-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}divider-prv.config" }
 	   ),
 
        new SorcerServiceDescriptor(
@@ -59,7 +59,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}subtractor-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}subtractor-prv.config" }
        )
     };
 }
