--- a/examples/ex5/ex5-prv/src/main/resources/config/boot-one-bean.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/boot-one-bean.config
@@ -23,7 +23,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex5-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}arithmetic-one-bean.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}arithmetic-one-bean.config" }
         )
     };
 }
