--- a/examples/ex6/ex6-prv/src/main/resources/config/services.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/services.config
@@ -33,7 +33,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}adder-prv.config" }
         ),
 
 		new SorcerServiceDescriptor(
@@ -45,7 +45,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}multiplier-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}multiplier-prv.config" }
        ),
           	
        new SorcerServiceDescriptor(
@@ -57,7 +57,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}divider-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}divider-prv.config" }
 	   ),
 
        new SorcerServiceDescriptor(
@@ -69,7 +69,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}subtractor-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}subtractor-prv.config" }
        )
     };
 }
