--- a/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
+++ b/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/config/services.config
@@ -40,7 +40,7 @@ com.sun.jini.start {
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
+			new String[] { "src${/}main${/}resources${/}config${/}adder-prv.config" }
         ),
 
 
@@ -54,7 +54,7 @@ com.sun.jini.start {
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}multiplier-prv.config" }
+			new String[] { "src${/}main${/}resources${/}config${/}multiplier-prv.config" }
        ),
 
        new SorcerServiceDescriptor(
@@ -67,7 +67,7 @@ com.sun.jini.start {
 			    runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}divider-prv.config" }
+			new String[] { "src${/}main${/}resources${/}config${/}divider-prv.config" }
 	   ),
 
        new SorcerServiceDescriptor(
@@ -80,7 +80,7 @@ com.sun.jini.start {
                   runtimeClasspath
 		      }),
 		      "sorcer.core.provider.ServiceTasker",
-		      new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}subtractor-prv.config" }
+		      new String[] { "src${/}main${/}resources${/}config${/}subtractor-prv.config" }
        )
 
     };
