--- a/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt-prv.config
+++ b/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt-prv.config
@@ -15,7 +15,7 @@ sorcer.core.provider.ServiceProvider {
 		location = "Sorcersoft.com Lab";
 		entries = new Entry[] { 
 			new Comment("Returns provider's host name and address"), 
-			new Location("2", "218", "146") };
+			new Location("", "", "Sorcersoft.com") };
 			
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };
 
