--- a/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt1-prv.config
+++ b/examples/ex1/ex1-prv/src/main/resources/config/whoIsIt1-prv.config
@@ -10,7 +10,7 @@ import sorcer.ex1.provider.*;
 import java.util.logging.Level;
 
 sorcer.core.provider.ServiceProvider {
-		name="XYZ";
+		name="ABC";
 		description = "SORCER \"Who Is It?\" provider";
 		location = "Sorcersoft.com Lab";
 		entries = new Entry[] { 
