--- a/examples/ex1/run-prv/configs/whoIsIt1-prv.config
+++ b/examples/ex1/run-prv/configs/whoIsIt1-prv.config
@@ -9,7 +9,7 @@ import net.jini.lookup.entry.*;
 import sorcer.ex1.*;
 
 sorcer.core.provider.ServiceProvider {
-		name="XYZ";
+		name="ABC";
 		description = "SORCER \"Who Is It?\" provider";
 		location = "Sorcersoft.com Lab";
 		entries = new Entry[] { 
