Refactoring ex5 and ex6

--- a/examples/ex5/ex5-prv/src/main/resources/config/arithmetic-all-beans.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/arithmetic-all-beans.config
@@ -13,9 +13,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
 import sorcer.core.provider.ui.*;
-import sorcer.arithmetic.*;
-import sorcer.arithmetic.*;
-import sorcer.arithmetic.provider.*;
+import sorcer.ex5.provider.*;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
