--- a/examples/ex5/ex5-prv/src/main/resources/config/divider-prv.config
+++ b/examples/ex5/ex5-prv/src/main/resources/config/divider-prv.config
@@ -11,7 +11,7 @@ import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
 import sorcer.core.provider.ui.*;
-import sorcer.arithmetic.provider.*;
+import sorcer.ex5.provider.*;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
