--- a/examples/ex6/ex6-prv/src/main/resources/config/arithmetic-one-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/arithmetic-one-bean.config
@@ -11,7 +11,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
-import sorcer.ex5.provider.provider.*;
+import sorcer.arithmetic.provider.*;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
@@ -19,10 +19,10 @@ sorcer.core.provider.ServiceProvider {
 		description = "Arithmetic - bean provider";
 		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] {
-        			sorcer.ex5.provider.Adder.class,
-        			sorcer.ex5.provider.Multiplier.class,
-        			sorcer.ex5.provider.Subtractor.class,
-        			sorcer.ex5.provider.Divider.class };
+        			sorcer.arithmetic.provider.Adder.class,
+        			sorcer.arithmetic.provider.Multiplier.class,
+        			sorcer.arithmetic.provider.Subtractor.class,
+        			sorcer.arithmetic.provider.Divider.class };
 
 		spaceEnabled = true;
 		
@@ -43,7 +43,7 @@ sorcer.core.provider.ServiceProvider {
 		monitorEnabled = true;
 		
 		// service beans	
-		beanClasses = new Class[] { sorcer.ex5.provider.ArithmeticImpl.class };
+		beanClasses = new Class[] { sorcer.arithmetic.provider.ArithmeticImpl.class };
 		
 		iconName="sorcer.jpg";
 
