Refactoring ex5 and ex6

--- a/examples/ex6/ex6-req/src/main/resources/config/arithmetic-ter.config
+++ b/examples/ex6/ex6-req/src/main/resources/config/arithmetic-ter.config
@@ -10,7 +10,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.service.*;
-import sorcer.ex6.requestor.NetArithmeticReq;
+import sorcer.arithmetic.requestor.NetArithmeticReq;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
