add description of how to get the sources using gin on console

--- a/pom.xml
+++ b/pom.xml
@@ -426,15 +426,17 @@
                             <report>dependency-management</report>
                             <report>plugin-management</report>
                             <report>issue-tracking</report>
-                            <!--<report>mailing-list</report>-->
+                            <report>mailing-list</report>
                             <report>license</report>
                             <report>project-team</report>
                             <report>scm</report>
                             <!--<report>index</report>-->
                         </reports>
+<!--
                         <configuration>
                             <aggregate>false</aggregate>
                         </configuration>
+-->
                     </reportSet>
                 </reportSets>
             </plugin>
