Refactored ex6, requestor.webster.codebase

--- a/examples/ex6/ex6-prv/src/main/resources/config/beans-prv.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/beans-prv.config
@@ -16,6 +16,7 @@ import sorcer.core.provider.ui.*;
 import sorcer.arithmetic.*;
 import sorcer.arithmetic.*;
 import sorcer.arithmetic.provider.*;
+import sorcer.arithmetic.provider.ContextManager;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
