--- a/examples/ex6/ex6-prv/src/main/resources/config/start-one-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-one-bean.config
@@ -23,7 +23,7 @@ com.sun.jini.start {
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
-          	new String[] { "src${/}main${/}resources${/}config${/}beans-prv.config" }
+          	new String[] { "src${/}main${/}resources${/}config${/}arithmetic-one-bean.config" }
         )
     };
 }
