Refactoring examples for workshop

--- a/examples/ex6/ex6-prv/src/main/resources/config/arithmetic-one-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/arithmetic-one-bean.config
@@ -25,7 +25,12 @@ sorcer.core.provider.ServiceProvider {
         			sorcer.arithmetic.provider.Divider.class };
 
 		spaceEnabled = true;
-		
+
+		// add service UI
+        entries = new Entry[] {
+            ArithmeticImpl.getCalculatorDescriptor(),
+            new Comment("It uses sorcer.arithmetic.Arithmometer for bean implementation") };
+
 		// remote logging
 		remoteLogging=true;
 		remoteLoggerManagerName="Logger";
