--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -121,9 +121,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>locker</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.sorcersoft.lockmgr</groupId>
+            <artifactId>lockmgr</artifactId>
+            <version>${v.lockmgr}</version>
+			<scope>import</scope>
+			<type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
