--- a/examples/ex1/ex1-rdl/pom.xml
+++ b/examples/ex1/ex1-rdl/pom.xml
@@ -6,29 +6,23 @@
 
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>ex3</artifactId>
+        <artifactId>ex1</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex3-dl</artifactId>
-    <name>SORCER examples :: ex3 :: dl</name>
+    <artifactId>ex1-rdl</artifactId>
+    <name>SORCER examples :: ex1 :: dl</name>
 
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex2-api</artifactId>
+            <artifactId>ex1-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-            <version>${v.sorcer}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>commons-req</artifactId>
-            <version>${v.sorcer}</version>
+        	<version>${v.sorcer}</version>
         </dependency>
     </dependencies>
-
 </project>
