--- a/examples/ex1/ex1-req/pom.xml
+++ b/examples/ex1/ex1-req/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex1-dl</artifactId>
+            <artifactId>ex1-rdl</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
