--- a/examples/ex3/ex3-rdl/pom.xml
+++ b/examples/ex3/ex3-rdl/pom.xml
@@ -6,23 +6,29 @@
 
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>ex1</artifactId>
+        <artifactId>ex3</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ex1-dl</artifactId>
-    <name>SORCER examples :: ex1 :: dl</name>
+    <artifactId>ex3-rdl</artifactId>
+    <name>SORCER examples :: ex3 :: dl</name>
 
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex1-api</artifactId>
+            <artifactId>ex2-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${v.sorcer}</version>
+            <version>${v.sorcer}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>commons-req</artifactId>
+            <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
+
 </project>
