--- a/examples/ex3/pom.xml
+++ b/examples/ex3/pom.xml
@@ -17,7 +17,7 @@
 	<url>http://sorcersoft.org/</url>
 
 	<modules>
-        <module>ex3-dl</module>
+        <module>ex3-rdl</module>
         <module>ex3-req</module>
 	</modules>
 </project>
