--- a/examples/ex6/ex6-prv/pom.xml
+++ b/examples/ex6/ex6-prv/pom.xml
@@ -28,6 +28,11 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ex6-sui</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
             <version>${v.sorcer}</version>
         </dependency>
