--- a/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
+++ b/examples/ex6/ex6-prv/src/main/resources/config/start-bean.config
@@ -16,10 +16,12 @@ com.sun.jini.start {
 
         new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-sui")
  			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
             ConfigUtil.concat(new Object[] {
                 Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-api"), ps,
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-sui"), ps,
             	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex6-prv"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
