Added surefire version to examples/pom.xml

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -35,6 +35,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.14.1</version>
 					<configuration>
 						<systemPropertyVariables>
 							<RIO_HOME>${env.SORCER_HOME}/lib/rio</RIO_HOME>
