fix dependency on lockmgr UNTESTED

--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -110,10 +110,11 @@ com.sun.jini.start {
 
 		// MutualExclusion - Locker
  /* 		new SorcerServiceDescriptor(
-           "" + Resolver.resolveRelative("org.sorcersoft.sorcer:locker"),
+           "" + Resolver.resolveRelative("org.sorcersoft.lockmgr:lockmgr-proxy"),
            policy,
             ConfigUtil.concat(new Object[] {
-                Resolver.resolveAbsolute("org.sorcersoft.sorcer:locker"), ps,
+                Resolver.resolveAbsolute("org.sorcersoft.lockmgr:lockmgr-api"), ps,
+                Resolver.resolveAbsolute("org.sorcersoft.lockmgr:lockmgr-service"), ps,
             	Resolver.resolveAbsolute("org.jgroups:jgroups:2.12.1.Final"), ps,
             	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
             	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
