--- a/tools/dependencies/pom.xml
+++ b/tools/dependencies/pom.xml
@@ -20,6 +20,7 @@
 		<v.sigar>1.6.4</v.sigar>
 	</properties>
 
+	<dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sigar</groupId>
@@ -30,6 +31,12 @@
 			<groupId>org.sorcersoft.sigar</groupId>
 			<artifactId>sigar</artifactId>
 			<version>${v.sigar}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- RIVER -->
 		<dependency>
@@ -134,4 +141,5 @@
 			<version>1.0b3</version>
 		</dependency>
 	</dependencies>
+	</dependencyManagement>
 </project>
